レクチャー26までコミット
レクチャー26までコミット

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -1,4 +1,10 @@
 $back: #eee;
+$text-color: #444;
 body {
   background-color: $back;
-}
+  text-align: center;
+  color: $text-color;
+};
+
+@import "GeocodeResult";
+@import "Map";
